# devdust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: PUBLISHING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml
devdust-cli/: Cargo.toml
devdust-cli/src/: main.rs
devdust-core/: Cargo.toml
devdust-core/src/: lib.rs
