[package]
name = "devdust-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for detecting and cleaning development project artifacts"

[dependencies]
# File system walking with filtering capabilities
walkdir = "2.5"
# Ignore patterns (respects .gitignore, etc.)
ignore = "0.4"
